# konference

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yaml  config.yaml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.run/: main.run.xml
infrastructure/: .terraform.lock.hcl  main.tf  provider.tf  variable.tf
meetings/: 20250131_040059_Test_Meeting.json  20250131_040129_Test_Meeting.json  20250131_040159_Test_Meeting.json  20250131_040302_Test_Meeting.json  20250131_040307_Test_Meeting.json  20250131_040344_Test_Meeting.json  20250131_040442_Test_Meeting.json  20250131_040534_Test_Meeting.json  20250131_040748_Test_Meeting.json  20250131_040957_Test_Meeting.json  20250131_041014_Test_Meeting.json  20250131_041029_test.json  20250131_041502_Test_Meeting.json  20250131_041706_Untitled_Meeting.json  20250131_041720_Test_Meeting.json  20250131_041801_Test_Meeting.json  20250131_041847_Test_Meeting.json  20250131_041932_Test_Meeting.json  20250131_041947_Test_Meeting.json  20250131_041954_Test_Meeting.json  20250131_042040_Test_Meeting.json  20250131_042127_Test_Meeting.json  20250131_042217_Test_Meeting.json
src/: __init__.py  audio_capture.py  config.py  logger.py  main.py  markdown_renderer.py  meeting_note.py  meeting_protocol.txt  meeting_store.py  protocol_writer.py  speech_transcriber.py
tests/: conftest.py  test_audio_capture.py  test_config.py  test_main.py  test_markdown_renderer.py  test_meeting_note.py  (+3 more)
(+20 files in other folders)
