[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "protocol-d"
version = "0.1.0"
description = "Meeting transcription and protocol generator using Azure Speech Services"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"] 